fix: Fix line spacing of paragraph and ul list

--- a/style/index.css
+++ b/style/index.css
@@ -64,6 +64,15 @@ a:hover{
     transform: scale(0) !important;
 }
 
+/* */
+li{
+    margin-bottom: 1.5px;
+}
+
+li ul{
+    margin-top: 1.5px;
+}
+
 /* 위치 가변 header */
 #header{
     position: fixed;
@@ -299,7 +308,7 @@ a:hover{
     font-weight: var(--inter-medium);
     font-size: 25px;
     text-align: center;
-    line-height: 1;
+    line-height: 1.2;
 
     margin-top:31px;
 }
@@ -451,7 +460,7 @@ a:hover{
     text-align: left;
     font-size: 18px;
     font-weight: var(--inter-regular);
-    line-height: 1;
+    line-height: 1.2;
 }
 
 #about .separate-bar{
@@ -1122,7 +1131,7 @@ a:hover{
 
     margin-bottom: 30px;
 
-    line-height: 1;
+    line-height: 1.2;
     color: var(--black);
     text-align: center;
 
@@ -1695,7 +1704,7 @@ a:hover{
 }
 
 #contact .location-content{
-    line-height: 1;
+    line-height: 1.2;
     font-size: 18px;
     color: var(--black);
     white-space: nowrap;
@@ -1792,7 +1801,7 @@ a:hover{
 #footer .information-container .contact{
     font-size: 18px;
     color: var(--black);
-    line-height: 1;
+    line-height: 1.2;
     font-weight: var(--inter-regular);
 
     margin-top: 13px;
